[package]
name = "lale"
version = "0.1.0"
edition = "2021"
authors = ["LaleDev <senin-adin@ornek.com>"]
description = "Kodun çiçek gibi açıldığı Türkçe-esintili programlama dili"
license = "MIT"
repository = "https://github.com/LaleDev/lale"
keywords = ["programming-language", "turkish", "lale"]
categories = ["compilers", "development-tools"]

[dependencies]
nom = "7.1"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"

[[bin]]
name = "lale"
path = "src/main.rs"
